--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<div class="logo-wrapper navbar-brand valign">
                 <div class="logo">
                     <!-- <img src="images/logo-light.png" class="logo-img" alt=""> -->
-                    <a href="index.html"><h2>Mary &amp; Brian</h2></a>
+                    <a href="index.html"><h2>Maria Teresa &amp; Giuseppe</h2></a>
                 </div>
             </div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="icon-bar"><i class="ti-line-double"></i></span> </button>
