--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <div class="row">
                                 <div class="col-md-12 text-center js-fullheight slider-text">
                                     <div class="slider-text-inner mx-auto">
-                                        <h2>Mary & Brian</h2>
+                                        <h2>Maria Teresa & Giuseppe</h2>
                                         <h6>24 December, 2022 — New York</h6>
                                     </div>
                                 </div>
