--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </div>
     </div>
     <!-- Countdown section -->
-    <div id="countdown" class="section-padding bg-img bg-fixed" data-overlay-dark="1" data-background="images/banner/1.jpg">
+    <div id="countdown" class="section-padding bg-salvia bg-fixed" data-overlay-dark="1" data-background="images/banner/1.jpg">
         <div class="container">
             <div class="row">
                 <div class="section-head col-md-12">
