--- a/index.html
+++ b/index.html
@@ -20,14 +20,6 @@
     <!--[if lt IE 9]>
         <script src="js/respond.min.js"></script>
     <![endif]-->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144098545-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-144098545-1');
-    </script>
 </head>
 <body>
     <!-- Preloader -->
@@ -83,7 +75,7 @@
                             PIAZZALE MARIA MADDALENA STARACE - CASTELLAMMARE DI STABIA - NAPOLI<br>
                         </p>
                         <p>Dalle ore 15:00 <br>
-                            <a href="https://www.google.com/maps/dir/40.8177177,14.1349856/PIAZZALE+MARIA+MADDALENA+STARACE+-+CASTELLAMMARE+DI+STABIA+-+NAPOLI/@40.7809002,14.033195,10z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x133bbd507526dae1:0xc37ecef35661fcc6!2m2!1d14.4854749!2d40.6926417" target="_blank" title="Google Map"><u class="color-salvia mb-5">Google Map</u></a>  
+                            <a href="https://goo.gl/maps/mhkGxBwW8PCUVwFF8" target="_blank" title="Google Map"><u class="color-salvia mb-5">Google Map</u></a>  
                         </p>
                         <p class="mt-5 mb-5">
                             è gradita gentile conferma
@@ -95,13 +87,13 @@
                             Via Cocumella, 7 - Sant'Agnello - Napoli<br>
                         </p>
                         <p>
-                            <a href="#" target="_blank" title="Google Map"><u class="color-salvia mb-5">Google Map</u></a>  
+                            <a href="https://goo.gl/maps/eFWfHPYxyaPFzzQt7" target="_blank" title="Google Map"><u class="color-salvia mb-5">Google Map</u></a>  
                         </p>
                         <p class="mt-5 ">
                             Per il parcheggio dirigersi verso l’MSC Sporting Club Parking situato a pochi passi dalla struttura
                         </p>
                         <p>
-                            <a href="#" target="_blank" title="Google Map"><u class="color-salvia mb-5">Google Map</u></a>  
+                            <a href="https://goo.gl/maps/DuLqcyJz6gDGiYFe6" target="_blank" title="Google Map"><u class="color-salvia mb-5">Google Map</u></a>  
                         </p>
                 </div>
             </div>
@@ -133,7 +125,7 @@
                     <img src="images/aereo.svg" class="img-fluid" alt="tag" width="436" height="137">
                     <h4 class="mt-5">La vostra presenza sarà il dono più bello.</h4>
                     <h4>Ma se gradite fare un regalo, potete contribuire a realizzare un viaggio da sogno.</h4>
-                    <p class="h2"><strong>IT43P1234567801234567890123</strong></p>
+                    <p class="h5"><strong>IT43P1234567801234567890123</strong></p>
                     <p>Intestato a Mariateresa Pucillo</p>
                 </div>
             </div>
