justify-content-center

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <ul>
+                    <ul class="d-flex flex-row justify-content-center">
                         <li><span id="days"></span>Giorni</li>
                         <li><span id="hours"></span>Ore</li>
                         <li><span id="minutes"></span>Minuti</li>
