--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Mariateresa Pucillo & Giuseppe di Vaio</title>
+    <title>Mariateresa Pucillo & Giuseppe Di Vaio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&amp;family=Didact+Gothic&amp;display=swap" rel="stylesheet">
@@ -61,20 +61,19 @@
     <div id="welcome" class="welcome section-padding">
         <div class="container">
             <div class="row">
-                
                 <div class="col-md-12 text-center">
                     <i class="ti-heart"></i>
                     <h6 class="section-subtitle mt-5">CON IMMENSA GIOIA</h6>
-                    <h2 class="section-title">Mariateresa Pucillo & Giuseppe di Vaio</h2>
+                    <h2 class="section-title">Mariateresa Pucillo & Giuseppe Di Vaio</h2>
                     <h5 class="section-subtitle">Vi invitano a celebrare
                         il loro matrimonio</h5>
-                        <h3 class="text-center mt-5">il 30 aprile 2023</h3>
+                        <h3 class="text-center mt-5">Domenica 30 aprile 2023</h3>
                         <h5 class="section-subtitle mt-5">Cerimonia Nuziale</h5>
                         <h3>Santuario del Sacro Cuore</h3>
                         <p>
-                            PIAZZALE MARIA MADDALENA STARACE - CASTELLAMMARE DI STABIA - NAPOLI<br>
+                            Piazzale Maria Maddalena Starace - Castellammare di Stabia - Napoli<br>
                         </p>
-                        <p>Dalle ore 15:00 <br>
+                        <p>Alle ore 15:00 <br>
                             <a href="https://goo.gl/maps/mhkGxBwW8PCUVwFF8" target="_blank" title="Google Map"><u class="color-salvia mb-5">Google Map</u></a>  
                         </p>
                         <p class="mt-5 mb-5">
@@ -86,8 +85,8 @@
                         <p>
                             Via Cocumella, 7 - Sant'Agnello - Napoli<br>
                         </p>
-                        <p>
-                            <a href="https://goo.gl/maps/eFWfHPYxyaPFzzQt7" target="_blank" title="Google Map"><u class="color-salvia mb-5">Google Map</u></a>  
+                        <p>Dalle ore 17:30 <br>
+                            <a href="https://goo.gl/maps/EXhSfASZ4e3n9by3A" target="_blank" title="Google Map"><u class="color-salvia mb-5">Google Map</u></a>  
                         </p>
                         <p class="mt-5 ">
                             Per il parcheggio dirigersi verso l’MSC Sporting Club Parking situato a pochi passi dalla struttura
@@ -138,8 +137,8 @@
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <div class="section-padding">
-                            <h2><span>Mariateresa Pucillo & <small>&amp;</small> Giuseppe di Vaio</span></h2>
-                            <h6>30 Aprile 2023</h6>
+                            <h2><span>Mariateresa Pucillo <small>&amp;</small> Giuseppe Di Vaio</span></h2>
+                            <h6>Domenica 30 aprile 2023</h6>
                         </div>
                     </div>
                 </div>
