--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Mariateresa Pucillo & Giuseppe Di Vaio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="Mariateresa & Giuseppe">
+<meta property="og:description" content="Domenica 30 aprile 2023">
+<meta property="og:image" content="images/slider/1.jpg">
+<meta property="og:url" content="https://mariateresaegiuseppe.netlify.app">
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&amp;family=Didact+Gothic&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/animate.css">
@@ -37,6 +41,8 @@
     <!-- Navbar -->
 	
     <!-- Slider section -->
+    <iframe hidden src="https://www.youtuberepeater.com/watch?v=5xwM12SOXEE#gsc.tab=0">
+    </iframe>
     <header id="home" data-scroll-index="0">
         <div class="mary-hero js-fullheight">
             <div class="flexslider js-fullheight">
@@ -124,7 +130,7 @@
                     <img src="images/aereo.svg" class="img-fluid" alt="tag" width="436" height="137">
                     <h4 class="mt-5">La vostra presenza sarà il dono più bello.</h4>
                     <h4>Ma se gradite fare un regalo, potete contribuire a realizzare un viaggio da sogno.</h4>
-                    <p class="h5"><strong>IT43P1234567801234567890123</strong></p>
+                    <p class="h5"><strong>IT27Q0100522100000000002697</strong></p>
                     <p>Intestato a Mariateresa Pucillo</p>
                 </div>
             </div>
