--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Mariateresa & Giuseppe" />
 <meta property="og:description" content="Domenica 30 aprile 2023" />
-<meta property="og:image" content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
+<meta property="og:image" content="images/slider/title-image.jpg" />
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&amp;family=Didact+Gothic&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/animate.css">
