--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <script src="js/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
+<body> 
     <!-- Preloader -->
     <div class="preloader">
         <div class="lds-heart">
@@ -67,6 +67,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
+                    <audio controls autoplay>
+                        <source src="mp3/audio.ogg" type="audio/ogg">
+                        <source src="mp3/audio.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                      </audio><br/>
                     <i class="ti-heart"></i>
                     <h6 class="section-subtitle mt-5">CON IMMENSA GIOIA</h6>
                     <h2 class="section-title">Mariateresa Pucillo & Giuseppe Di Vaio</h2>
