--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
                             <div class="row">
                                 <div class="col-md-12 text-center js-fullheight slider-text">
                                     <div class="slider-text-inner mx-auto">
-                                       
                                     </div>
                                 </div>
                             </div>
@@ -67,21 +66,30 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <audio controls autoplay>
-                        <source src="mp3/audio.ogg" type="audio/ogg">
-                        <source src="mp3/audio.mp3" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                      </audio><br/>
-                    <i class="ti-heart"></i>
+                    <div class="mb-5">
+                        <audio controls autoplay>
+                            <source src="mp3/audio.ogg" type="audio/ogg">
+                            <source src="mp3/audio.mp3" type="audio/mpeg">
+                            Your browser does not support the audio element.
+                          </audio>
+                    </div>
+                    
+                    <i class="ti-heart mt-5"></i>
                     <h6 class="section-subtitle mt-5">CON IMMENSA GIOIA</h6>
-                    <h2 class="section-title">Mariateresa Pucillo & Giuseppe Di Vaio</h2>
+                    <h2 class="section-title">Mariateresa Pucillo</h2>
+                    <h2 class="section-title">&</h2>
+                    <h2 class="section-title">Giuseppe Di Vaio</h2>
+
                     <h5 class="section-subtitle">Vi invitano a celebrare
                         il loro matrimonio</h5>
                         <h3 class="text-center mt-5">Domenica 30 aprile 2023</h3>
                         <h5 class="section-subtitle mt-5">Cerimonia Nuziale</h5>
-                        <h3>Santuario del Sacro Cuore</h3>
+                        <h3 class="mt-5">Santuario del Sacro Cuore</h3>
+                        <p class="mb-0">
+                            Piazzale Maria Maddalena Starace
+                        </p>
                         <p>
-                            Piazzale Maria Maddalena Starace - Castellammare di Stabia - Napoli<br>
+                           Castellammare di Stabia - Napoli
                         </p>
                         <p>Alle ore 15:00 <br>
                             <a href="https://goo.gl/maps/mhkGxBwW8PCUVwFF8" target="_blank" title="Google Map"><u class="color-salvia mb-5">Google Map</u></a>  
@@ -91,9 +99,12 @@
                         </p>
                         <i class="ti-heart"></i>
                         <h5 class="section-subtitle mt-5">Dopo la cerimonia, gli sposi saranno lieti di festeggiare con voi presso il</h5>
-                        <h3 class="mt-3 mb-0">Grand Hotel Cocumella</h3>
+                        <h3 class="mt-5 mb-5 mb-0">Grand Hotel Cocumella</h3>
+                        <p class="mb-0">
+                            Via Cocumella, 7
+                        </p>
                         <p>
-                            Via Cocumella, 7 - Sant'Agnello - Napoli<br>
+                           Sant'Agnello - Napoli<br>
                         </p>
                         <p>Dalle ore 17:30 <br>
                             <a href="https://goo.gl/maps/EXhSfASZ4e3n9by3A" target="_blank" title="Google Map"><u class="color-salvia mb-5">Google Map</u></a>  
