--- a/index.html
+++ b/index.html
@@ -158,7 +158,9 @@
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <div class="section-padding">
-                            <h2><span>Mariateresa Pucillo <small>&amp;</small> Giuseppe Di Vaio</span></h2>
+                            <h2><span>Mariateresa Pucillo</span></h2>
+                            <h2><small>&amp;</small></h2>
+                            <h2><span>Giuseppe Di Vaio</span></h2>
                             <h6>Domenica 30 aprile 2023</h6>
                         </div>
                     </div>
