--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <img src="images/aereo.svg" class="img-fluid" alt="tag" width="436" height="137">
-                    <h4 class="mt-5">La vostra presenza sarà il dono più bello.</h4>
-                    <h4>Ma se gradite fare un regalo, potete contribuire a realizzare un viaggio da sogno.</h4>
+                    <p class="mt-5 h4 text-dark">La vostra presenza sarà il dono più bello.</p>
+                    <p class="mt-0 mb-5 h4 text-dark">Ma se gradite fare un regalo, potete contribuire a realizzare un viaggio da sogno.</p>
                     <p class="h5"><strong>IT27Q0100522100000000002697</strong></p>
                     <p>Intestato a Mariateresa Pucillo</p>
                 </div>
